--- a/A3A_BRIEFING/briefing_BLUEFOR_TASKS.html
+++ b/A3A_BRIEFING/briefing_BLUEFOR_TASKS.html
@@ -2,8 +2,8 @@
 <!-- Описание задач, и другая важная информация для условной стороны BLUEFOR -->
 <!-- Ниже описан пример -->
 <br/>
-Нам нужно выдвинутся к месту падения вертолета и найти бортовой самописец, а потом доставить его к нашему транспорту (место респа).
-
-
-<br/><br/><br/><br/>
-См. условности
+Нам нужно отбить атаку на базу, хотя бы частично сохранить важные точки в нефти добыче и не утерять документы о
+дальнейших планах в этой отрасли.
+<br/><br/>В штабном <marker name = "place">здании</marker> имеется медицинская комната.
+<br/><br/>
+См. условности.
