--- a/A3A_BRIEFING/briefing_MISSC.html
+++ b/A3A_BRIEFING/briefing_MISSC.html
@@ -3,13 +3,26 @@
 <!-- Ниже описан пример -->
 Условности:<br/>
 - Запрещено снимать/переодевать форму (даже если она своей фракции).
-<br/>- Всем запрещено покидать территорию черного маркера (он появится на фризе!)
-<br/><br/><br/>
-Особенности:
-<br/>- Вертолет находится примерно в центре территории черного круга (он появится на фризе!)
-<br/>- Бортовой самописец лежит в радиусе примерно 50 метров
-<br/>- Респы и зона рандомные
-<br/>- Время на миссию - 40 минут
-<br/><br/>
-Самописец:<br/>
-<img image='bobobo2.jpg'/>
+<br/><br/><font color='#00FF00'>УСЛОВНОСТИ ДЛЯ ЗЕЛЕНЫХ:</font>
+<br/> - Запрещено брать документы из стола в Штабном <marker name = "place">здании</marker> или из
+снаряжения кого либо.
+<br/><font color='#0000FF'>УСЛОВНОСТИ ДЛЯ СИНИХ:</font>
+<br/>- Отд. А1-2 и А1-3 запрещено покидать красный <marker name = "m_1">овал</marker> пока Штаб(КС)
+не окажется на територии базы (маркер исчезнет).
+<br/> - Запрещено брать документы из стола в Штабном <marker name = "place">здании</marker> или из
+снаряжения кого либо.
+<br/>
+<br/><br/>Условия для победы <font color='#00FF00'>Зеленых</font>:
+<br/> - На <marker name = "a_1">базе</marker> не осталось живых командиров обороны и поднят <marker name = "флаг">флаг
+</marker> Талибан (флаг
+поднимается
+через контекстное меню с флагштоком).
+<br/> - Или база зачищена под 0 и зелёных больше 2х.
+<br/><br/>Условия для победы <font color='#0000FF'>Синих</font>:
+<br/> - В течение часа на базе находится хотя бы 1 живой командир и поднят флаг США(пере захватываемый).
+<br/> - В течение часа хотя бы 1 вентиль уцелел из 7 и документы не вынесены из базы на 800м.
+<br/> - Зелёных осталось меньше 5. Или обороны 3х кратный численный перевес.
+<br/><br/>Условия для победы <font color='#FF0000'>Красных</font>:
+<br/> - В течение часа уничтожены 7 вентилей (<marker name = "v_0">в1</marker>, <marker name = "v_1">в2</marker>,
+<marker name
+                                                                                                                        = "v_6">в3</marker>, <marker name = "v_5">в4</marker>, <marker name = "v_2">в5</marker>, <marker name = "v_3">в6 и в7</marker>),<img image="img\vent.jpg"/><br/> выкрасть документы из штабного <marker name = "place">здания</marker> и вынести их на 800м от базы.
