--- a/A3A_BRIEFING/briefing_MISSION_DESCRIPTION.html
+++ b/A3A_BRIEFING/briefing_MISSION_DESCRIPTION.html
@@ -1,14 +1,15 @@
 <!-- ЭТО - КОММЕНТАРИЙ. ОН НЕ ВИДЕН В ИГРЕ -->
 <!-- Информация о миссии, версии миссии, авторе -->
 <!-- Ниже описан пример -->
-Черный ящик<br/>
-Версия: 1<br/>
-Автор: [RATS]Frayd<br/>
+Аскари<br/>
+Версия: 1 <br/>
+Автор: [DER]Idushiy<br/>
 <br/>
 Описание миссии:<br/>
 <br/>
-Украина, 2018 год.
+1982 год.
 
-
-<br/><br/>Ранним утром неизвестные обстреляли российский блок-пост и попытались уйти в сторону украинской территории. По тревоге был поднят вертолет ми-24, который уничтожил террористов, но был сбит на приграничной территории.
-<br/><br/>Украинская сторона заявила, что Россия совершила очередной акт агрессии, в ответ российский МИД заверил, что войска не вторгались в воздушное пространство Украины…
+<br/><br/>Американская база, под охранной которой находится Месторождение 'Пари-Сиах'.
+<br/><br/>Русские организовали нападение на базу США руками Талибов, и под шумиху планируют диверсии на
+важные точки в нефти добыче.
+<br/><br/> P.S. Обе стороны являются не зависимыми, но дипломатию никто не отменял.
