--- a/A3A_BRIEFING/briefing_OPFOR_TASKS.html
+++ b/A3A_BRIEFING/briefing_OPFOR_TASKS.html
@@ -3,8 +3,10 @@
 <!-- Ниже описан пример -->
 <br/>
 
-
-Нам нужно выдвинутся к месту падения вертолета и найти бортовой самописец, а потом доставить его к нашему транспорту (место респа).
+Перед нами стоит задача: Расшатать влияние США в этом регионе, для этого мы наняли подстрекателей, снабдили их
+оружием и поставили задачу, напасть на базу США. Мы так же снабдили информацией о том когда командир базы будет в
+отлучке, возможно это сыграем нам на руку.
+От нас в свою очередь требуется: Нанести не поправимый ущерб как самой базе так и их работе в нефти добыче
 <br/><br/>
 См. условности.
 
