--- a/A3A_BRIEFING/briefing_INDEPENDENT_ENEMY.html
+++ b/A3A_BRIEFING/briefing_INDEPENDENT_ENEMY.html
@@ -1,4 +1,4 @@
 <!-- ЭТО - КОММЕНТАРИЙ. ОН НЕ ВИДЕН В ИГРЕ -->
 <!-- Информация о протвнике -->
 <!-- Ниже описан пример -->
-Отряды Талибан и Русские диверсанты
+Армия США и возможно Русские диверсанты если не договаривались.
