--- a/A3A_BRIEFING/briefing_OPFOR_ENEMY.html
+++ b/A3A_BRIEFING/briefing_OPFOR_ENEMY.html
@@ -1,4 +1,4 @@
 <!-- ЭТО - КОММЕНТАРИЙ. ОН НЕ ВИДЕН В ИГРЕ -->
 <!-- Информация о протвнике -->
 <!-- Ниже описан пример -->
-Силы специальных операций Украины
+Армия США и возможны контакты с Талибами если не обговаривали обратное.
