--- a/A3A_BRIEFING/briefing_INDEPENDENT_TASKS.html
+++ b/A3A_BRIEFING/briefing_INDEPENDENT_TASKS.html
@@ -11,5 +11,8 @@
 то отомстил бы им сам, но Он [ожелал испытать одних из вас посредством других. Он никогда не сделает тщетными деяния тех, кто был убит на пути Аллаха.» <br/> Сура 47, аят 4.
 <br/><br/>Уралы отделений являются медицинским транспортом.
 <br/><br/>
+Для связи с Русскими настройте свою ДВ на частоту 31.1 и если они захотят вступить с нами в диалог они так-же настроят
+ДВ станцию на эту частоту.
+<br/><br/>
 См. условности.
 
