--- a/A3A_BRIEFING/briefing_OPFOR_TASKS.html
+++ b/A3A_BRIEFING/briefing_OPFOR_TASKS.html
@@ -4,9 +4,14 @@
 <br/>
 
 Перед нами стоит задача: Расшатать влияние США в этом регионе, для этого мы наняли подстрекателей, снабдили их
-оружием и поставили задачу, напасть на базу США. Мы так же снабдили информацией о том когда командир базы будет в
+оружием и поставили задачу: напасть на базу США. Мы так же снабдили их информацией о том когда командир базы будет в
 отлучке, возможно это сыграем нам на руку.
-От нас в свою очередь требуется: Нанести не поправимый ущерб как самой базе так и их работе в нефти добыче
+<br/>От нас в свою очередь требуется: Нанести не поправимый ущерб как самой базе так и их работе в нефти добыче,
+также раздобыть засекреченные документы хранящиеся на базе
 <br/><br/>
-См. условности.
+
+Для связи с Талибами в Урале есть ДВ станция. Настройте ее на частоту 31.1 и если они захотят вступить с нами в диалог
+они так-же настроят ДВ станцию на эту частоту.
+
+<br/><br/>См. условности.
 
